# telegram

./: .env.example  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
app/: main.py
app/core/: config.py
app/handlers/: message_handlers.py
app/services/: formatting.py  media.py  sender.py
tests/: conftest.py  test_handlers.py  test_health.py  test_media.py  test_send.py  test_webhook_url.py
